--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -1,41 +1,184 @@
-<html>
+<!doctype html>
+<html lang="en">
+
     <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tangerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
     </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="selected" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="selected" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="selected" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="selected" href="about_tangerine.html">About</a></li>
-                </ul>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
-            <div>
-                <h2 align="center">About Us</h2>
-                <img id="about_pics" src="ryan_cox.jpg" alt="Ryan Cox">
-                <h3 align="center">Ryan Cox</h3>
-                <p align="center"><u>Major</u>: Information and Computer Science, Informatics<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Web Developer/Fitness Information Consultant<br/><u>Hobbies</u>: Outside of school I enjoy weightlifting, playing guitar, playing video games, playing basketball, listening to music, and eating.</p>
-                <img id="about_pics" src="matthew.jpeg" alt="Matthew Nguyen">
-                <h3 align="center">Matthew Nguyen</h3>
-                <p align="center"><u>Major</u>: Quantitative Economics; Information and Computer Science, Informatics<br/><u>Year</u>: 2nd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: Outside of school, I enjoy skiing, watching monty python, hanging out with friends, film and cinema, going to musical concerts, hiking, and playing the oboe. </p>
-                <img id="about_pics" src="maricel.jpg" alt="Maricel Mendiola">
-                <h3 align="center">Maricel Mendiola</h3>
-                <p align="center"><u>Major</u>: Information and Computer Science, Informatics<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy going on road trips, watching The Good Doctor and The Flash, having karaoke night with friends, and eating all-you-can-eat sushi. </p>
-                <img id="about_pics" src="jose.jpg" alt="Jose Andrade">
-                <h3 align="center">Jose Andrade</h3>
-                <p align="center"><u>Major</u>: Software Engineering<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy programming, playing games, and running when not in school. I hope you enjoy the website as much as the team has enjoyed building the website.</p>
-                <img id="about_pics" src="adam.jpg" alt="Adam Sloma">
-                <h3 align="center">Adam Sloma</h3>
-                <p align="center"><u>Major</u>: Music and Informatics<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy watching the English Premier League, rock climbing, riding/maintaining my bike, and cooking Italian food. My favorite movie is Silence, and my favorite composer is obviously Beethoven.  </p>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
             </div>
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
             </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav><br><br><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-around">
+        <div class="col-md-4">
+          <div class="card border-light mb-3" style="width: 20rem;">
+            <div class="card-header text-center h5">Ryan Cox</div>
+            <img class="card-img-top" src="ryan_cox.jpg" alt="Card image cap">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Major</b>: Information and Computer Science, Informatics</li>
+              <li class="list-group-item"><b>Year</b>: 3rd</li>
+              <li class="list-group-item"><b>Team Role</b>: Web Developer/Fitness Information Consultant</li>
+              <li class="list-group-item"><b>Hobbies</b>: Outside of school I enjoy weightlifting, playing guitar,
+                playing video games, playing basketball, listening to music, and eating.</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
         </div>
-    </body>
+
+        <div class="col-md-4">
+          <div class="card border-light mb-3" style="width: 20rem;">
+            <div class="card-header text-center h5">Matthew Nguyen</div>
+            <img class="card-img-top" src="matthew.jpeg" alt="Card image cap">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Major</b>: Quantitative Economics; Information and Computer Science, Informatics</li>
+              <li class="list-group-item"><b>Year</b>: 2nd</li>
+              <li class="list-group-item"><b>Team Role</b>: Web Developer</li>
+              <li class="list-group-item"><b>Hobbies</b>: Outside of school, I enjoy skiing, watching monty python,
+                hanging out with friends, film and cinema, going to musical concerts, hiking, and playing the oboe.</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row justify-content-around">
+        <div class="col-md-4">
+          <div class="card border-light mb-3" style="width: 20rem;">
+            <div class="card-header text-center h5">Maricel Mendiola</div>
+            <img class="card-img-top" src="maricel.jpg" alt="Card image cap">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Major</b>: Informatics</li>
+              <li class="list-group-item"><b>Year</b>: 3rd</li>
+              <li class="list-group-item"><b>Team Role</b>: Web Developer</li>
+              <li class="list-group-item"><b>Hobbies</b>: I enjoy watching the English Premier League,
+                rock climbing, riding/maintaining my bike, and cooking Italian food. My favorite movie is Silence,
+                and my favorite composer is obviously Beethoven.</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card border-light mb-3" style="width: 20rem;">
+            <div class="card-header text-center h5">Jose Andrade</div>
+            <img class="card-img-top" src="jose.jpg" alt="Card image cap">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Major</b>: Software Engineering</li>
+              <li class="list-group-item"><b>Year</b>: 2nd</li>
+              <li class="list-group-item"><b>Team Role</b>: Web Developer</li>
+              <li class="list-group-item"><b>Hobbies</b>: I enjoy programming, playing games, and running when
+                not in school. I hope you enjoy the website as much as the team has enjoyed building the website.</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row justify-content-around">
+        <div class="col-md-4">
+          <div class="card border-light mb-3" style="width: 20rem;">
+            <div class="card-header text-center h5">Adam Sloma</div>
+            <img class="card-img-top" src="adam.jpg" alt="Card image cap">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Major</b>: Music and Informatics</li>
+              <li class="list-group-item"><b>Year</b>: 3rd</li>
+              <li class="list-group-item"><b>Team Role</b>: Web Developer</li>
+              <li class="list-group-item"><b>Hobbies</b>: I enjoy going on road trips, watching The Good
+                Doctor and The Flash, having karaoke night with friends, and eating all-you-can-eat sushi.</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+    </div>
+
 </html>
