--- a/weightlifting_tangerine.html
+++ b/weightlifting_tangerine.html
@@ -14,7 +14,7 @@
     </head>
 
     <!-- NAVIGATION BAR -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fd7e14;">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
