--- a/hiit_tangerine.html
+++ b/hiit_tangerine.html
@@ -77,7 +77,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav><br><br>
     <!-- BODY -->
     <div class="container">
       <div id="main">
