Modified Strength 102 page to be mobile friendly.

--- a/hiit_strength_101.html
+++ b/hiit_strength_101.html
@@ -93,7 +93,14 @@
         </div>
       </div>
     </div><br><br>
-
+    <!-- CIRCUIT INFO -->
+    <div class="container">
+      <div class="card bg-light text-center">
+        <div class="card-body lead">
+        <b>Perform 3-5 Circuits for Optimal Results</b>
+        </div>
+      </div>
+  </div><br><br>
     <!-- BODY -->
     <div class="container">
       <div class="card-deck">
