Fixed Strength 101 page.

--- a/hiit_strength_101.html
+++ b/hiit_strength_101.html
@@ -106,7 +106,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Push-Ups x 20 reps</h5>
+            <h5 class="card-title">1) Push-Ups x 20 reps</h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
@@ -115,7 +115,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Plank Tucks x 10 reps</h5>
+            <h5 class="card-title">2) Plank Tucks x 10 reps</h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="plank_tucks.jpg" alt="Card image cap">
@@ -124,7 +124,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Squat Jumps x 10 reps</h5>
+            <h5 class="card-title">3) Squat Jumps x 10 reps</h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="squat_jumps.jpg" alt="Card image cap">
@@ -137,7 +137,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Mountain Climbers x 10 reps</h5>
+            <h5 class="card-title">4) Mountain Climbers x 10 reps</h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="mountain_climbers.jpg" alt="Card image cap">
@@ -146,7 +146,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Alternating Lunges x 10 reps</h5>
+            <h5 class="card-title">5) Alternating Lunges x 10 reps</h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="alternating_lunges.jpg" alt="Card image cap">
@@ -155,7 +155,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Stationary Running x 30 seconds</h5>
+            <h5 class="card-title">6) Stationary Running x 30 seconds</h5>
           </div>
           <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
         </div>
