Modified Strength 103 page to be mobile friendly.

--- a/hiit_strength_102.html
+++ b/hiit_strength_102.html
@@ -149,7 +149,7 @@
             <h5 class="card-title">5) Leg Lifts x 10 reps</h5>
           </div>
           <div class="col-12">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="leg_lifts.jpg" alt="Card image cap">
           </div>
         </div>
 
@@ -157,7 +157,7 @@
           <div class="card-body">
             <h5 class="card-title">6) Alternating Lunges x 10 seconds</h5>
           </div>
-          <img class="card-img-top" src="leg_lifts.jpg" alt="Card image cap">
+          <img class="card-img-top" src="alternating_lunges.jpg" alt="Card image cap">
         </div>
       </div>
     </div><br>
