Fixed hiit reps text.

--- a/hiit_strength_102.html
+++ b/hiit_strength_102.html
@@ -106,7 +106,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">1) Push-Ups x 20 reps</h5>
+            <h5 class="card-title">1) Push-Ups <i>x 20 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
@@ -115,7 +115,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">2) Plank Tucks x 10 reps</h5>
+            <h5 class="card-title">2) Plank Tucks <i>x 10 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="plank_tucks.jpg" alt="Card image cap">
@@ -124,7 +124,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">3) Squat Jumps x 10 reps</h5>
+            <h5 class="card-title">3) Squat Jumps <i>x 10 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="squat_jumps.jpg" alt="Card image cap">
@@ -137,7 +137,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">4) Push-Ups x 20 reps</h5>
+            <h5 class="card-title">4) Push-Ups <i>x 20 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
@@ -146,7 +146,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">5) Leg Lifts x 10 reps</h5>
+            <h5 class="card-title">5) Leg Lifts <i>x 10 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="leg_lifts.jpg" alt="Card image cap">
@@ -155,7 +155,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">6) Alternating Lunges x 10 seconds</h5>
+            <h5 class="card-title">6) Alternating Lunges <i>x 10 seconds</i></h5>
           </div>
           <img class="card-img-top" src="alternating_lunges.jpg" alt="Card image cap">
         </div>
@@ -166,7 +166,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">7) Burpees x 10 reps</h5>
+            <h5 class="card-title">7) Burpees <i>x 10 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="burpees.jpg" alt="Card image cap">
@@ -175,7 +175,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">8) Sit-Ups x 10 reps</h5>
+            <h5 class="card-title">8) Sit-Ups <i>x 10 reps</i></h5>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="sit_ups.jpg" alt="Card image cap">
@@ -184,7 +184,7 @@
 
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">9) Stationary Running x 30 seconds</h5>
+            <h5 class="card-title">9) Stationary Running <i>x 30 seconds</i></h5>
           </div>
           <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
         </div>
