Modified Fat Loss 102 and 103 pages to be mobile friendly.

--- a/hiit_fl_101.html
+++ b/hiit_fl_101.html
@@ -83,13 +83,13 @@
       <br><br><br>
       <div class="row">
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="hiit_strength_101.html" role="button">Strength 101</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="hiit_fl_101.html" role="button">Fat Loss 101</a>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="hiit_strength_102.html" role="button">Strength 102</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="hiit_fl_102.html" role="button">Fat Loss 102</a>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="hiit_strength_103.html" role="button">Strength 103</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="hiit_fl_103.html" role="button">Fat Loss 103</a>
         </div>
       </div>
     </div><br><br>
