--- a/hiit_fl_103.html
+++ b/hiit_fl_103.html
@@ -1,96 +1,189 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">HIIT Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Strength</ah></h3>
-                        <li><a class="" href="hiit_strength_101.html">-  Strength 101</a></li>
-                        <li><a class="" href="hiit_strength_102.html">-  Strength 102</a></li>
-                        <li><a class="" href="hiit_strength_103.html">-  Strength 103</a></li>
-                        <h3><ah class="" href="">Fat Loss</ah></h3>
-                        <li><a class="" href="hiit_fl_101.html">-  Fat Loss 101</a></li>
-                        <li><a class="" href="hiit_fl_102.html">-  Fat Loss 102</a></li>
-                        <li><a class="" href="hiit_fl_103.html">-  Fat Loss 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">HIIT Fat Loss 103</h2>
-                        <h4 align="center">Perform 4-6 Circuits for Optimal Results</h4>
-                    </div>
-                    <div id="routine">
-                        <div id="picture_hiit">
-                            <img src="stationary_running.JPG" alt="Push-Ups">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Stationary Running</exerciseHead><i> x 30 seconds</i></h4>
-                        </div>
-                        <div id="picture_hiit">
-                            <img src="step_ups.jpg" alt="Step-Ups">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Step-Ups</exerciseHead><i> x 1 minute</i></h4>
-                        </div>
-                        <div id="picture_hiit">
-                            <img src="kettle_ball_swings.jpg" alt="Kettleball Swings">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Kettleball Swings</exerciseHead><i> x 1 minute</i></h4>
-                        </div>
-                        <div id="picture_hiit">
-                            <img src="mountain_climbers.jpg" alt="Mountain Climbers">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Mountain Climbers</exerciseHead><i> x 20 reps</i></h4>
-                        </div>
-                        <div id="picture_hiit">
-                            <img src="burpees.jpg" alt="Burpees">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Burpees</exerciseHead><i> x 1 minute</i></h4>
-                        </div>
-                            <div id="picture_hiit">
-                            <img src="kettle_ball_swings.jpg" alt="Kettleball Swings">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Kettleball Swings</exerciseHead><i> x 1 minute</i></h4>
-                        </div>
-                        <div id="picture_hiit">
-                            <img src="step_ups.jpg" alt="Step-Ups">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Step-Ups</exerciseHead><i> x 1 minute</i></h4>
-                        </div>
-                        <div id="picture_hiit">
-                            <img src="stationary_running.JPG" alt="Push-Ups">
-                        </div>
-                        <div id="routine_exercise_hitt">
-                            <h4><exerciseHead>Stationary Running</exerciseHead><i> x 30 seconds</i></h4>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tangerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="hiit_fl_101.html" role="button">Fat Loss 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="hiit_fl_102.html" role="button">Fat Loss 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="hiit_fl_103.html" role="button">Fat Loss 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- CIRCUIT INFO -->
+    <div class="container">
+      <div class="card bg-light text-center">
+        <div class="card-body lead">
+        <b>Perform 4-6 Circuits for Optimal Results</b>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">1) Stationary Running <i>x 30 seconds</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">2) Step-Ups <i>x 1 minute</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="step_ups.jpg" alt="Card image cap">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">3) Kettleball Swings <i>x 1 minute</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="kettle_ball_swings.jpg" alt="Card image cap">
+          </div>
+        </div>
+      </div>
+    </div><br>
+
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">4) Mountain Climbers <i>x 20 reps</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="mountain_climbers.jpg" alt="Card image cap">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">5) Burpees <i>x 1 minute</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="burpees.jpg" alt="Card image cap">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">6) Kettleball Swings <i>x 1 minute</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="kettle_ball_swings.jpg" alt="Card image cap">
+          </div>
+        </div>
+      </div>
+    </div><br>
+
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">7) Step-Ups <i>x 1 minute</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="step_ups.jpg" alt="Card image cap">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">8) Stationary Running <i>x 30 seconds</i></h5>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
+          </div>
+        </div>
+      </div>
+    </div>
+
 </html>
