--- a/shoulders_103.html
+++ b/shoulders_103.html
@@ -83,13 +83,13 @@
       <br><br><br>
       <div class="row">
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="shoulder_101.html" role="button">Shoulder 101</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="shoulders_101.html" role="button">Shoulder 101</a>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="shoulder_102.html" role="button">Shoulder 102</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="shoulders_102.html" role="button">Shoulder 102</a>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="shoulder_103.html" role="button">Shoulder 103</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="shoulders_103.html" role="button">Shoulder 103</a>
         </div>
       </div>
     </div><br><br>
