--- a/home_tangerine.html
+++ b/home_tangerine.html
@@ -77,7 +77,16 @@
           </li>
         </ul>
       </div>
-    </nav><br><br>
+      <!-- LOG-IN LINK -->
+      <div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="login.html">Log in</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <br><br>
     <!-- BODY -->
     <div class="container">
       <div id="main">
