--- a/hiit_tangerine.html
+++ b/hiit_tangerine.html
@@ -77,6 +77,14 @@
           </li>
         </ul>
       </div>
+      <!-- LOG-IN LINK -->
+      <div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="login.html">Log in</a>
+          </li>
+        </ul>
+      </div>
     </nav><br><br>
     <!-- BODY -->
     <div class="container">
