--- a/stairmaster.html
+++ b/stairmaster.html
@@ -77,27 +77,15 @@
           </li>
         </ul>
       </div>
-    </nav>
-    <!--  GRID BUTTONS -->
-    <!--
-    <div class="container">
-      <br><br><br>
-      <div class="row">
-        <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="chest_101.html" role="button">Chest 101</a>
-        </div>
-        <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_102.html" role="button">Chest 102</a>
-        </div>
-        <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_103.html" role="button">Chest 103</a>
-        </div>
+      <!-- LOG-IN LINK -->
+      <div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="login.html">Log in</a>
+          </li>
+        </ul>
       </div>
-    </div><br><br>
-  -->
-  <br>
-  <br>
-  <br>
+    </nav><br><br><br>
     <!-- BODY -->
     <div class="container">
       <div class="row justify-content-md-center">
