added config settings for Firebase, got started on account data structures

--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -18,12 +18,12 @@
         // TODO:Replace everything inside the config with your own things(to Adam)
         //Make sure that the firebase is a live database and not a standard database and also edit the permissions to display True
         var config = {
-          piKey: "AIzaSyDAmQ3nH3wD2WbGuigeNQYhmW_mp0nQdIU",
-          authDomain: "project-26ab1.firebaseapp.com",
-          databaseURL: "https://project-26ab1.firebaseio.com",
-          projectId: "project-26ab1",
-          storageBucket: "project-26ab1.appspot.com",
-          messagingSenderId: "888262615637"
+          apiKey: "AIzaSyBaHVox7skGzll8OrkVvoTknlnLk5ba7y8",
+          authDomain: "tangerine-ba3ad.firebaseapp.com",
+          databaseURL: "https://tangerine-ba3ad.firebaseio.com",
+          projectId: "tangerine-ba3ad",
+          storageBucket: "tangerine-ba3ad.appspot.com",
+          messagingSenderId: "439864139122"
         };
         firebase.initializeApp(config);
         /* code that didn't work
