--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -12,8 +12,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <!-- The firebase information. Its the following two scripts that will be added wherever firebase will be needed-->
-      <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
-      <script src="js/db_handling.js"></script>
+    <!--   <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
+      <script src="js/db_handling.js"></script> -->
     </head>
 
     <!-- NAVIGATION BAR -->
