--- a/home_tangerine.html
+++ b/home_tangerine.html
@@ -81,7 +81,7 @@
       <div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="btn btn-light" role="button" href="login.html">Log in</a>
+            <a class="btn btn-light" role="button" href="login.html"><b>LOG IN</b> or <b>SIGN UP</b></a>
           </li>
         </ul>
       </div>
