Took out Log in button on Log in page.

--- a/login.html
+++ b/login.html
@@ -92,14 +92,6 @@
           </li>
         </ul>
       </div>
-      <!-- LOG IN LINK -->
-      <div>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="btn btn-light disabled" role="button" href="login.html">Log in</a>
-          </li>
-        </ul>
-      </div>
     </nav>
     <br><br><br><br>
     <!-- BODY -->
@@ -128,13 +120,11 @@
                 <div class="text-center">
                   <button type="submit" class="btn btn-primary" id="logINButton">Log in</button><br>
                   <a class="btn btn-link text-dark" href="#" role="button">Forgot Password?</a><br>
-                  <a class="btn btn-link text-dark" href="#" role="button">Don't have an account? <b>Get Sarted</b></a>
                 </div>
               </form>
             </div>
           </div>
         </div>
-
         <!-- OR -->
       <div class="col-2 align-self-center text-center">
         <h5>OR</h5>
@@ -148,7 +138,7 @@
           <div class="card-body">
             <form class="needs-validation" novalidate>
               <div class="form-group">
-                <label for="validationCustom01">First Name</label>
+                <label for="validationCustom01">First name</label>
                 <input type="text" class="form-control" id="validationCustom01" placeholder="John" required>
                 <div class="valid-feedback">
                   Looks good!
@@ -158,7 +148,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="validationCustom02">Last Name</label>
+                <label for="validationCustom02">Last name</label>
                 <input type="text" class="form-control" id="validationCustom02" placeholder="Doe" required>
                 <div class="valid-feedback">
                   Looks good!
@@ -186,7 +176,7 @@
                 <div class="valid-feedback">
                   Looks good!
                 </div>
-              </div>
+              </div><br>
               <div class="text-center">
                 <button type="submit" class="btn btn-primary" id="logINButton">Sign me up!</button>
               </div>
