minor changes and made code easier to read as well as started to work on login page js

--- a/login.html
+++ b/login.html
@@ -139,7 +139,7 @@
             <form class="needs-validation" novalidate>
               <div class="form-group">
                 <label for="validationCustom01">First name</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="John" required>
+                <input type="text" class="form-control firstName" id="validationCustom01" placeholder="John" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -149,7 +149,7 @@
               </div>
               <div class="form-group">
                 <label for="validationCustom02">Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" placeholder="Doe" required>
+                <input type="text" class="form-control secondName" id="validationCustom02" placeholder="Doe" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -159,7 +159,7 @@
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="john_doe@email.com" required>
+                <input type="email" class="form-control emailAddress" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="john_doe@email.com" required>
                 <div class="invalid-feedback">
                   Please input a valid email.
                 </div>
@@ -168,7 +168,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="validationCustomUsername">Username</label>
+                <label for="validationCustomUsername userNameClass">Username</label>
                 <div class="input-group">
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="inputGroupPrepend">@</span>
@@ -193,7 +193,7 @@
                 </div>
               </div><br>
               <div class="text-center">
-                <button type="submit" class="btn btn-primary" id="logINButton">Sign me up!</button>
+                <button type="submit" class="btn btn-primary" id="signUpButton">Sign me up!</button>
               </div>
             </form>
             <!-- SIGN UP VALIDATION SCRIPT -->
