Changed Chest 103 page structure so that images are similar in size.

--- a/chest_102.html
+++ b/chest_102.html
@@ -102,7 +102,6 @@
       </div>
     </div><br><br>
     <!-- BODY -->
-    <!-- BODY -->
     <div class="container">
       <div class="card-deck">
         <div class="card">
@@ -219,7 +218,7 @@
       </div>
     </div><br>
 
-    <div class="containter">
+    <div class="container">
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
           <div class="card-header text-center h5">Bodyweight Dips</div>
