--- a/chest_103.html
+++ b/chest_103.html
@@ -103,97 +103,153 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Barbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="incline_bb_bench.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(5 sets | 15, 12, 12, 4-4-4, 4-4-4)</i></p>
-              <p><u>Info</u>: There will be 5 sets. The first three sets will be focused on performing high repetitions with an emphasis on good form. Add 15-20% more weight after the first set. The last two sets will be cluster sets. The goal here is to choose a weight that is usually only doable for  reps and to force your body to do it for 12. This will be done through a cluster set where in between each 4 reps there will be a 20-30 second rest period before performing the next 4 reps.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest just below your collarbone. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but your glutes on the bench.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Incline Barbell Bench Press</div>
+          <img class="card-img-top" src="incline_bb_bench.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 sets | 15, 12, 12, 4-4-4, 4-4-4)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 5 sets. The first three sets will be focused on performing high repetitions
+              with an emphasis on good form. Add 15-20% more weight after the first set. The last two sets will be cluster
+              sets. The goal here is to choose a weight that is usually only doable for  reps and to force your body to do it
+              for 12. This will be done through a cluster set where in between each 4 reps there will be a 20-30 second rest
+               period before performing the next 4 reps.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in
+              a straight down motion and touch the bar to your chest just below your collarbone. Keep arms at about a 45
+              degree angle from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but
+               your glutes on the bench.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Flat Barbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="flat_bb_bench.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 12, 10, 8, 6)</i></p>
-              <p><u>Info</u>: There will be 4 sets. All 4 will be emphasize good form. After each set you will increase the weight 10-15% and decrease the repetitions by 2.</p>
-              <p><u>Form</u>: Grip both dumbbells and hold them shoulder width apart and straight up on a 30 degree incline. Draw your shoulder blades backward. Bring the dumbells in a straight down motion and bring them so that they almost touch the anterior deltoid. Turn your hands slightly so that your arms are at about a 45 degree angle. Touch the dumbbells together at the top. Keep a slight arch in your back but your glutes on the bench.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Flat Barbell Bench Press</div>
+          <img class="card-img-top" src="flat_bb_bench.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 12, 10, 8, 6)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. All 4 will be emphasize good form. After each set you will increase
+               the weight 10-15% and decrease the repetitions by 2.</p>
+            <p class="card-text"><u>Form</u>: Grip both dumbbells and hold them shoulder width apart and straight up on a 30 degree
+              incline. Draw your shoulder blades backward. Bring the dumbells in a straight down motion and bring
+              them so that they almost touch the anterior deltoid. Turn your hands slightly so that your arms are
+              at about a 45 degree angle. Touch the dumbbells together at the top. Keep a slight arch in your back
+               but your glutes on the bench.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="incline_db_bench.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15, 15, 12, 12)</i></p>
-              <p><u>Info</u>: There will be 4 sets. All 4 will be focused on high repetitions with an emphasis on good form.
-                Increase the weight after the second set about 10-15%.</p>
-              <p><u>Form</u>: Grab the dumbells and hold them above you touching. Draw your shoulder blades backward. Bring
-                the bar in a straight down motion and bend your elbows just past 90 degrees. Keep arms at about a 45 degree
-                angle from your sides in order to keep pressure off your shoulders.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
+          <img class="card-img-top" src="incline_db_bench.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 15, 15, 12, 12)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. All 4 will be focused on high repetitions with an emphasis on good form.
+              Increase the weight after the second set about 10-15%.</p>
+            <p class="card-text"><u>Form</u>: Grab the dumbells and hold them above you touching. Draw your shoulder blades backward. Bring
+              the bar in a straight down motion and bend your elbows just past 90 degrees. Keep arms at about a 45 degree
+              angle from your sides in order to keep pressure off your shoulders.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Plate Press X Incline Dumbbell Fly</div>
-            <div class="card-body text-center">
-              <img src="incline_plate_press.jpg" class="img-fluid" alt="Responsive image">
-              <img src="incline_db_fly.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 10x10, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Each will emphasize high repetitions with good form. The weight will remain the same for each set and you will perform 10 repetitions of the plate press and immediately follow it with 10 repetitions of the Dumbbell Fly.</p>
-              <p><u>Form</u>: For the plate press, grab a plate and squeeze it in between your hands. Without using the hole in the plate to help hold it, push the plate outward from your chest in order to squeeze the chest.</p>
-              <p>Turn your hands inward and grip the dumbells so that they are touching in the middle above you. Bring the dumbbells out in a smooth motion to stretch the chest but keep a bend at the elbow in order to take pressure off the shoulder.</p>
+        <div class="card">
+          <div class="card-header text-center h5">Incline Plate Press X Incline Dumbbell Fly</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="incline_plate_press.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="incline_db_fly.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 10x10, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Each will emphasize high repetitions with good form. The weight
+              will remain the same for each set and you will perform 10 repetitions of the plate press and
+              immediately follow it with 10 repetitions of the Dumbbell Fly.</p>
+            <p class="card-text"><u>Form</u>: For the plate press, grab a plate and squeeze it in between your hands. Without using
+              the hole in the plate to help hold it, push the plate outward from your chest in order to squeeze the
+              chest.</p>
+            <p class="card-text">Turn your hands inward and grip the dumbells so that they are touching in the middle above you.
+              Bring the dumbbells out in a smooth motion to stretch the chest but keep a bend at the elbow in order
+              to take pressure off the shoulder.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Hammer Strength Press</div>
-            <div class="card-body text-center">
-              <img src="incline_hammer_press.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 5-15, 8-12, 10-10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. All 4 will be a drop set with an emphasis on form. The first part of the set will be pushing heavy weight followed by a 20-30 second rest and dropping the weight 30-40%. Increase the starting weight each time and increase the percentage of the weight dropped each time.</p>
-              <p><u>Form</u>: Grip the machine just outside of shoulder width. Bring your shoulder blades back and flex the lats. Push forward and allow the machine to guide your arms as they come forward. As they come back, keep your elbows at a 45 degree angle from your sides.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Incline Hammer Strength Press</div>
+          <img class="card-img-top" src="incline_hammer_press.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 5-15, 8-12, 10-10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. All 4 will be a drop set with an emphasis on form. The first part
+              of the set will be pushing heavy weight followed by a 20-30 second rest and dropping the weight 30-40%.
+              Increase the starting weight each time and increase the percentage of the weight dropped each time.</p>
+            <p class="card-text"><u>Form</u>: Grip the machine just outside of shoulder width. Bring your shoulder blades back and flex
+              the lats. Push forward and allow the machine to guide your arms as they come forward. As they come
+               back, keep your elbows at a 45 degree angle from your sides.</p>
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">High Cable Fly X Low Cable Fly</div>
-            <div class="card-body text-center">
-              <img src="high_cable_fly.jpg" class="img-fluid" alt="Responsive image">
-              <img src="low_cable_fly.webp" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 15x15, 12x12, AMRAPxAMRAP)</i></p>
-              <p><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the high cable fly for the first part of the set with an emphasis on higher repetitions and control. You will then superset with the low cable fly, with an emphasis on higher repetitions and control. The last set you will perform as many reps as possible for both exercises.</p>
-              <p><u>Form</u>: For high cable flys, place the cable settings high and with straight arms, bring your hands together to squeeze the chest around the waist area.</p>
-              <p>For low cable flys, place the cable settings low and with straight arms, bring your hands together in front of the upper chest.</p>
+        <div class="card">
+          <div class="card-header text-center h5">High Cable Fly X Low Cable Fly</div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="high_cable_fly.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="low_cable_fly.webp" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 15x15, 12x12, AMRAPxAMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the high cable fly for
+               the first part of the set with an emphasis on higher repetitions and control. You will then superset
+               with the low cable fly, with an emphasis on higher repetitions and control. The last set you will
+               perform as many reps as possible for both exercises.</p>
+            <p class="card-text"><u>Form</u>: For high cable flys, place the cable settings high and with straight arms, bring your
+              hands together to squeeze the chest around the waist area.</p>
+            <p class="card-text">For low cable flys, place the cable settings low and with straight arms, bring your hands together in
+               front of the upper chest.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
